[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GodetteVN/fundamentals/quickMenuLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[node name="quickMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="skipButton" type="Button" parent="."]
margin_left = 650.0
margin_top = 1020.0
margin_right = 717.0
margin_bottom = 1066.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Skip"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autoButton" type="Button" parent="."]
margin_left = 720.0
margin_top = 1020.0
margin_right = 791.0
margin_bottom = 1066.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Auto"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="Button" parent="."]
margin_left = 1139.58
margin_top = 1019.11
margin_right = 1238.58
margin_bottom = 1065.11
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Setting"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="."]
margin_left = 880.0
margin_top = 1020.0
margin_right = 955.0
margin_bottom = 1066.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QsaveButton" type="Button" parent="."]
margin_left = 965.707
margin_top = 1019.93
margin_right = 1063.71
margin_bottom = 1065.93
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Q.Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveButton" type="Button" parent="."]
margin_left = 800.0
margin_top = 1020.82
margin_right = 874.0
margin_bottom = 1066.82
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="historyButton" type="Button" parent="."]
margin_left = 1069.58
margin_top = 1020.03
margin_right = 1131.58
margin_bottom = 1066.03
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Hist."
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainButton" type="Button" parent="."]
margin_left = 1249.58
margin_top = 1019.59
margin_right = 1316.58
margin_bottom = 1065.59
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Main"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="."]
visible = false
margin_left = 900.0
margin_top = 1020.0
margin_right = 961.0
margin_bottom = 1066.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="skipButton" to="." method="_on_skipButton_mouse_entered"]
[connection signal="mouse_exited" from="skipButton" to="." method="_on_skipButton_mouse_exited"]
[connection signal="pressed" from="skipButton" to="." method="_on_skipButton_pressed"]
[connection signal="mouse_entered" from="autoButton" to="." method="_on_autoButton_mouse_entered"]
[connection signal="mouse_exited" from="autoButton" to="." method="_on_autoButton_mouse_exited"]
[connection signal="pressed" from="autoButton" to="." method="_on_autoButton_pressed"]
[connection signal="mouse_entered" from="SettingButton" to="." method="_on_SettingButton_mouse_entered"]
[connection signal="mouse_exited" from="SettingButton" to="." method="_on_SettingButton_mouse_exited"]
[connection signal="pressed" from="SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="mouse_entered" from="loadButton" to="." method="_on_loadButton_mouse_entered"]
[connection signal="mouse_exited" from="loadButton" to="." method="_on_loadButton_mouse_exited"]
[connection signal="pressed" from="loadButton" to="." method="_on_loadButton_pressed"]
[connection signal="mouse_entered" from="QsaveButton" to="." method="_on_QsaveButton_mouse_entered"]
[connection signal="mouse_exited" from="QsaveButton" to="." method="_on_QsaveButton_mouse_exited"]
[connection signal="pressed" from="QsaveButton" to="." method="_on_QsaveButton_pressed"]
[connection signal="mouse_entered" from="saveButton" to="." method="_on_saveButton_mouse_entered"]
[connection signal="mouse_exited" from="saveButton" to="." method="_on_saveButton_mouse_exited"]
[connection signal="pressed" from="saveButton" to="." method="_on_saveButton_pressed"]
[connection signal="mouse_entered" from="historyButton" to="." method="_on_historyButton_mouse_entered"]
[connection signal="mouse_exited" from="historyButton" to="." method="_on_historyButton_mouse_exited"]
[connection signal="pressed" from="historyButton" to="." method="_on_historyButton_pressed"]
[connection signal="mouse_entered" from="mainButton" to="." method="_on_mainButton_mouse_entered"]
[connection signal="mouse_exited" from="mainButton" to="." method="_on_mainButton_mouse_exited"]
[connection signal="pressed" from="mainButton" to="." method="_on_mainButton_pressed"]
[connection signal="mouse_entered" from="quitButton" to="." method="_on_quitButton_mouse_entered"]
[connection signal="mouse_exited" from="quitButton" to="." method="_on_quitButton_mouse_exited"]
[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
